--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <img class="header__img" src="./images/1540413471685.jpg" alt="hero-img" />
       <h1 class="header__text">
         <span class="header__text__name">MARTA MATEU LÓPEZ</span></h1> <h2> Full
-          stack web developer and data scientist.</h2> <br>  
+          stack web developer and Cloud Engineer.</h2> <br>  
       </h1>
     </header>
 
