--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
       </h1>
     </header>
 
+        <section class="normal-section">
+      <h1 class="normal-section__heading">Interviews</h1>
+      <p class="normal-section__content">
+       Stories from [Your Name]: Inspirational Interviews 
+      </p>
+      <a class="link--primary" target="_blank" rel="noreferrer noopener" href="https://www.youtube.com/watch?v=_d7nXWCKN7k">BDT Interview</a>
+      <a class="link--secondary" target="_blank" rel="noreferrer noopener" href="https://www.youtube.com/watch?v=_d7nXWCKN7k"> Opground Interview</a>
+    </section>
+
     <section class="off-white-section">
    <section class="section-skills">
   <div class="section-skills-header">
