--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <p class="normal-section__content">
        Stories from MARTA MATEU: Inspirational Interviews 
       </p>
-      <a class="link--primary" target="_blank" rel="noreferrer noopener" href="https://www.youtube.com/watch?v=_d7nXWCKN7k">BDT Interview</a>
+      <a class="link--primary" target="_blank" rel="noreferrer noopener" href="https://www.youtube.com/watch?v=v9Qt8hrzTn4">BDT Interview</a>
       <a class="link--secondary" target="_blank" rel="noreferrer noopener" href="https://www.youtube.com/watch?v=_d7nXWCKN7k"> Opground Interview</a>
     </section>
 
